# pipeline_dev

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  environment.yml  plinedev.yaml  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: black.yml  bump_version.yml  code_testing.yml  deploy-to-prod.yml  lint_job.yml  main_pipeline.yml  pr_tests.yml  publish_dockerhub.yml  publish_testpypi.yml  rollback_if_conflict_in_prod.yaml
docker/: Dockerfile
docs/source/: conf.py  index.rst
src/: __init__.py  collatz.py  math.py
src/nrvplinet/: __init__.py  collatz.py  smath.py
test/: collatz.py  math.py  smath.py  test_collatz.py
